--- a/mmall-fe/src/view/index.html
+++ b/mmall-fe/src/view/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<%= require('html-loader!./layout/html-head.html')  %>
+
+<head>
+    <%= require('html-loader!./layout/head-common.html')  %>
+    <title><%= htmlWebpackPlugin.options.title %>--happymmall電商平台</title>
+</head>
+
 <body>
-    <h1>Hello~123</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <%= require('html-loader!./layout/nav.html') %>
+    <%= require('html-loader!./layout/header.html') %>
+    <div class="page-wrap w">
+        <%= require('html-loader!./layout/nav-side.html') %>
+        <div class="content with-nav">test</div>
+    </div>
+    <%= require('html-loader!./layout/footer.html') %>
 </body>
+
 </html>
